--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,15 @@
 
   <body>
 
-    <div class="container content">
-      <div class="masthead">
+    <div class="masthead">
+      <div class="container">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
           <small>{{ site.tagline }}</small>
         </h3>
       </div>
+    </div>
+    <div class="container content">
 
       {{ content }}
 
