Style changes. Blog post. Lots of stuff.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,7 @@
 	</title>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css" />
-	<link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css" />
+	<link rel="stylesheet" href="{{ site.baseurl }}css/style.css" />
 
 	<!-- Google Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Muli:300' rel='stylesheet' type='text/css' />
