--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,24 +2,26 @@
 layout: default
 ---
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date: "%Y.%m.%d" }}</span>
+<article class="post">
+  <header>
+    <h1 class="post-title">{{ page.title }}</h1>
+    <span class="post-date">{{ page.date | date: "%Y.%m.%d" }}</span>
+  </header>
   {{ content }}
-</div>
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ site.baseurl }}{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date: "%Y.%m.%d" }}</small>
-          </a>
-        </h3>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
+  <footer class="related">
+    <h2>Related Posts</h2>
+    <ul class="related-posts">
+      {% for post in site.related_posts limit:3 %}
+        <li>
+          <h3>
+            <a href="{{ site.baseurl }}{{ post.url }}">
+              {{ post.title }}
+              <small>{{ post.date | date: "%Y.%m.%d" }}</small>
+            </a>
+          </h3>
+        </li>
+      {% endfor %}
+    </ul>
+  </footer>
+</article>
