--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
           <div class="container">
             <h3 class="masthead-title">
               <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
+              {% if site.localenvironment == true %}
+              <span style="color: red;">DEVELOPMENT</span>
+              {% endif %}
               <small>&nbsp;&nbsp;&nbsp;&nbsp;{{ site.tagline }}</small>
             </h3>
           </div>
