Complete mobile layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
               {% if site.localenvironment == true %}
               <span style="color: red;">DEVELOPMENT</span>
               {% endif %}
-              <small>&nbsp;&nbsp;&nbsp;&nbsp;{{ site.tagline }}</small>
+              <small>{{ site.tagline }}</small>
             </h3>
           </div>
         </div>
@@ -43,8 +43,8 @@
             <a class="icon icon-linkedin" itemprop="url" href="http://www.linkedin.com/in/jeddahyoung" title="Find me on LinkedIn"></a>
             <a class="icon icon-github" itemprop="url" href="https://github.com/jedd-ahyoung" title="Find me on Github"></a>
           </div>
-        </div><div class="column on-3 right-align">
-          <p>
+        </div><div class="column on-3">
+          <p class="copyright">
             &copy; Jedd Ahyoung, {{ site.time | date: '%Y' }}. All rights reserved.
           </p>
           <img class="logo" src="/images/logo.svg" />
