--- a/_scss/icons.scss
+++ b/_scss/icons.scss
@@ -46,10 +46,17 @@
 a.icon
 {
 	display: inline-block;
-	font-size: 50px;
 	color: rgba(255, 255, 255, 0.5);
 	text-decoration: none;
 	padding: 2px;
+
+	@media screen and (max-width: 640px) {
+		font-size: 70px;
+	}
+
+	@media screen and (min-width: 640px) {
+		font-size: 50px;
+	}
 
 	&:before
 	{
