--- a/_scss/posts.scss
+++ b/_scss/posts.scss
@@ -5,10 +5,18 @@
 
 .page,
 .post {
-  position: relative;
-  padding: 5em;
-  background: #fff;
-  border-radius: 30px;
+  @media screen and (min-width: 640px) {
+    position: relative;
+    padding: 5em;
+    background: #fff;
+    border-radius: 30px;
+  }
+
+  @media screen and (max-width: 640px) {
+    position: relative;
+    padding: 1rem 0;
+    background: #fff;
+  }
 }
 
 // Blog post or page title
