Add disqus and update post styles.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,5 +24,8 @@ layout: default
         </li>
       {% endfor %}
     </ul>
+
+    <br /><br />
+    {% include disqus.html %}
   </footer>
 </article>
