--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,6 @@ layout: default
     </ul>
 
     <br /><br />
-    {% include disqus.html %}
+    {% include disqus.html uid=page.uid title=page.title url=page.url %}
   </footer>
 </article>
