--- a/_scss/icons.scss
+++ b/_scss/icons.scss
@@ -74,3 +74,29 @@ a.icon
 		color: rgba(255, 255, 255, 1);
 	}
 }
+
+.disqus-comment-count:before {
+	display: inline-block;
+	background-image: url('../images/comment.svg');
+	background-size: 20px 20px;
+	width: 20px; 
+	height: 20px;
+	color: '#ff9900';
+	content: '';
+	margin-right: 5px;
+	position: relative;
+
+	@media screen and (min-width: 640px) {
+		background-size: 20px 20px;
+		width: 20px;
+		height: 20px;
+		top: 3px;
+	}
+
+	@media screen and (max-width: 640px) {
+		background-size: 15px 15px;
+		width: 15px;
+		height: 15px;
+		top: 2px;
+	}
+}
