Set up layout. Content is still WIP.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,16 @@
       <div class="push"></div>
     </div>
 
+    <div class="inspiration">
+      <div class="container">
+        <div class="column on-2">
+          <strong>{{site.title}}</strong> is a blog for the average joe programmer - just the guy or girl who's trying to come up. Everyone makes mistakes; this blog is intended to celebrate the learning process.
+        </div><div class="column on-2">
+          There really needs to be some kind of content here....
+        </div>
+      </div>
+    </div>
+
     <div class="footer">
       <div class="container">
         <div class="column on-3 center-align">
