--- a/_scss/layout.scss
+++ b/_scss/layout.scss
@@ -34,6 +34,30 @@
 	}
 }
 
+.inspiration {
+	min-height: 5rem;
+	background: #ebebeb;
+	color: #000;
+
+	.column {
+		vertical-align: top;
+
+		@media screen and (min-width: 640px) {
+			display: inline-block;
+			padding: 2rem 0;
+
+			&.on-2 {
+				width: 50%;
+			}
+		}
+
+		@media screen and (max-width: 640px) {
+			display: block;
+			padding: 1rem 0;
+		}
+	}
+}
+
 .footer {
 	min-height: 15rem;
 	background: rgba(36, 50, 48, 0.8);
