--- a/_scss/posts.scss
+++ b/_scss/posts.scss
@@ -7,12 +7,13 @@
 .post {
   @media screen and (min-width: 640px) {
     position: relative;
-    padding: 5em;
+    padding: 0 5em 5em 5em;
     background: #fff;
-    border-radius: 30px;
 
     &:first-child {
-      padding: 5em 5em 0 5em;
+      padding: 5em;
+      border-top-left-radius: 30px;
+      border-top-right-radius: 30px;
     }
   }
 
