Redefine layout to support authors.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,40 +19,14 @@
           </div>
         </div>
       </div>
-      <div class="wrapper">
-        <div class="container content">
-
-          {{ content }}
-
-        </div>
-      </div>
+      {{ content }}
       <div class="push"></div>
-    </div>
-
-    <div class="inspiration">
-      <div class="container">
-        <div class="column on-2">
-          <strong>{{site.title}}</strong> is a blog for the average joe programmer - just the guy or girl who's trying to come up. Everyone makes mistakes; this blog is intended to celebrate the learning process.
-        </div><div class="column on-2">
-          There really needs to be some kind of content here....
-        </div>
-      </div>
     </div>
 
     <div class="footer">
       <div class="container">
-        <div class="column on-3 center-align">
-          <img class="moneyshot" src="/images/moneyshot.jpg" />
-        </div><div class="column on-3">
-          <p class="blurb">
-            I'm <a href="http://www.jedd-ahyoung.com">Jedd Ahyoung</a>, the author of <strong>{{ site.title }}</strong> - look me up on GitHub, StackOverflow, and LinkedIn! 
-          </p>
-          <div class="center-align">
-            <a class="icon icon-mail" itemprop="email" href="mailto:jedd.ahyoung@gmail.com" title="Send me email"></a>
-            <a class="icon icon-stackoverflow" itemprop="url" href="http://stackoverflow.com/users/677526/jedd-ahyoung" title="View my StackOverflow contributions"></a>
-            <a class="icon icon-linkedin" itemprop="url" href="http://www.linkedin.com/in/jeddahyoung" title="Find me on LinkedIn"></a>
-            <a class="icon icon-github" itemprop="url" href="https://github.com/jedd-ahyoung" title="Find me on Github"></a>
-          </div>
+        <div class="column on-3 span-2">
+          <strong>{{site.title}}</strong> is a blog for the average joe programmer - just the guy or girl who's trying to come up. Everyone makes mistakes; this blog is intended to celebrate the learning process.
         </div><div class="column on-3">
           <p class="copyright">
             &copy; Jedd Ahyoung, {{ site.time | date: '%Y' }}. All rights reserved.
