--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,31 +1,46 @@
 ---
 layout: default
 ---
+<div class="wrapper">
+  <article>
+    <div class="container content">
+      <div class="post">
+        <header>
+          <h1 class="post-title">{{ page.title }}</h1>
+          <span class="post-date">{{ page.date | date: "%Y.%m.%d" }}</span>
+        </header>
+        {{ content }}
 
-<article class="post">
-  <header>
-    <h1 class="post-title">{{ page.title }}</h1>
-    <span class="post-date">{{ page.date | date: "%Y.%m.%d" }}</span>
-  </header>
-  {{ content }}
 
-
-  <footer class="related">
-    <h2>Related Posts</h2>
-    <ul class="related-posts">
-      {% for post in site.related_posts limit:3 %}
-        <li>
-          <h3>
-            <a href="{{ site.url }}{{ post.url }}">
-              {{ post.title }}
-              <small>{{ post.date | date: "%Y.%m.%d" }}</small>
-            </a>
-          </h3>
-        </li>
-      {% endfor %}
-    </ul>
-
-    <br /><br />
-    {% include disqus.html uid=page.uid title=page.title url=page.url %}
-  </footer>
-</article>
+        <div class="related">
+          <section>
+            <h2>Related Posts</h2>
+            <ul class="related-posts">
+              {% for post in site.related_posts limit:3 %}
+                <li>
+                  <h3>
+                    <a href="{{ site.url }}{{ post.url }}">
+                      {{ post.title }}
+                      <small>{{ post.date | date: "%Y.%m.%d" }}</small>
+                    </a>
+                  </h3>
+                </li>
+              {% endfor %}
+            </ul>
+          </section>
+          <br /><br />
+          <section>
+            {% include disqus.html uid=page.uid title=page.title url=page.url %}
+          </section>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="author inspiration">
+        <div class="container">
+         {% include author/jahyoung.html %}
+        </div>
+      </div>
+      </footer>
+  </article>
+</div>
