--- a/_scss/layout.scss
+++ b/_scss/layout.scss
@@ -37,7 +37,15 @@
 .inspiration {
 	min-height: 5rem;
 	background: #ebebeb;
+}
+
+.author {
 	color: #000;
+
+	.container {
+		padding-left: 4.5em;
+		padding-right: 4.5em;
+	}
 
 	.column {
 		vertical-align: top;
@@ -55,6 +63,32 @@
 			display: block;
 			padding: 1rem 0;
 		}
+	}
+
+	.icon {
+		font-size: 120px;
+		color: black;
+	}
+
+	.moneyshot {
+		@media screen and (min-width: 640px) {
+			margin: 0;
+			float: right;
+			height: 280px;
+			width: 280px;
+			border-radius: 140px;
+		}
+
+		@media screen and (max-width: 640px) {
+			margin: 0 auto;
+			height: 200px;
+			width: 200px;
+			border-radius: 100px;
+		}
+	}
+
+	.bio {
+		font-size: 1.1em;
 	}
 }
 
@@ -83,6 +117,10 @@
 
 			&.on-3 {
 				width: 33.33%;
+
+				&.span-2 {
+					width: 66.66%;
+				}
 			}
 		}
 
