Fix tags, add front matter for meta.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
 	  {% for tag in page.tags %}
 	    <meta property="article:tags" content="{{ tag }}" />
 	  {% endfor %}
-	  <meta property="og:image" content="{{ site.baseurl }}{{ page.tw_image }}" />
+	  <meta property="og:image" content="{{ site.baseurl }}images/logo.svg" />
 	{% endif %}
 
 	<meta name="twitter:card" content="summary" />
