Fix url config in _config.yml.

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -4,7 +4,7 @@
 	var disqus_shortname = 'blog-jedd-ahyoung-com';
 	var disqus_identifier = '{{ include.uid }}';
 	var disqus_title = '{{ include.title }}';
-	var disqus_url = '{{ site.url }}{{ include.url }}';
+	var disqus_url = '{{ site.url }}/{{ include.url }}';
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
 	(function() {
