--- a/_scss/code.scss
+++ b/_scss/code.scss
@@ -38,6 +38,7 @@ pre {
   code {
     padding: 0;
     font-size: 100%;
+    white-space: pre;
     color: inherit;
     background-color: transparent;
   }
@@ -47,6 +48,7 @@ pre {
 .highlight {
   margin-bottom: 1rem;
   border-radius: 4px;
+  overflow-x: auto;
 
   pre {
     margin-bottom: 0;
@@ -58,21 +60,21 @@ pre {
   .gist-file {
     font-family: Menlo, Monaco, "Courier New", monospace !important;
   }
-  
+
   .markdown-body {
     padding: 15px;
   }
-  
+
   pre {
     padding: 0;
     background-color: transparent;
   }
-  
+
   .gist-file .gist-data {
     font-size: .8rem !important;
     line-height: 1.4;
   }
-  
+
   code {
     padding: 0;
     color: inherit;
