--- a/_scss/type.scss
+++ b/_scss/type.scss
@@ -73,13 +73,13 @@ abbr[title] {
 
 /* Quotes */
 blockquote {
-  padding: .5rem 1rem;
-  margin: .8rem 0;
+  padding: .5rem .5rem;
+  margin: .8rem .8rem;
   color: #7a7a7a;
   border-left: .25rem solid #e5e5e5;
 
   @media (min-width: 30em) {
-    padding-right: 5rem;
+    padding-right: 1.25rem;
     padding-left: 1.25rem;
   }
 }
