Update footer to add break.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,9 @@
           <strong>{{site.title}}</strong> is a blog for the average joe programmer - just the guy or girl who's trying to come up. Everyone makes mistakes; this blog is intended to celebrate the learning process.
         </div><div class="column on-3">
           <p class="copyright">
-            &copy; Jedd Ahyoung, {{ site.time | date: '%Y' }}. All rights reserved.
+            &copy; Jedd Ahyoung, {{ site.time | date: '%Y' }}.
+            <br />
+            All rights reserved.
           </p>
           <img class="logo" src="/images/logo.svg" />
         </div>
