--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <strong>{{site.title}}</strong> is a blog for the average joe programmer - just the guy or girl who's trying to come up. Everyone makes mistakes; this blog is intended to celebrate the learning process.
         </div><div class="column on-3">
           <p class="copyright">
-            &copy; Jedd Ahyoung, {{ site.time | date: '%Y' }}.
+            &copy; J.W. Ahyoung, {{ site.time | date: '%Y' }}.
             <br />
             All rights reserved.
           </p>
