--- a/_includes/author/jahyoung.html
+++ b/_includes/author/jahyoung.html
@@ -1,5 +1,5 @@
 <div class="column on-2">
 	<p class="bio">J.W. Ahyoung is a developer with a passion for learning and growth. When he's not busy reading articles about data structures on Wikipedia, he likes to study languages (both computer and human), meet new people, and play bass. He currently resides in Washington State.</p>
 </div><div class="column on-2">
-	<img class="moneyshot" src="/images/moneyshot3.png" />
+	<img class="moneyshot" src="{{ '/' | relative_url }}images/moneyshot3.png" />
 </div>
