--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,14 +26,14 @@
     <div class="footer">
       <div class="container">
         <div class="column on-3 span-2">
-          <strong>{{site.title}}</strong> is a blog for the average joe programmer - just the guy or girl who's trying to come up. Everyone makes mistakes; this blog is intended to celebrate the learning process.
+          <strong>{{site.title}}</strong> is a blog for the average joe programmer - just the guy or gal who's trying to come up. Everyone makes mistakes; this blog is intended to celebrate the learning process.
         </div><div class="column on-3">
           <p class="copyright">
             &copy; J.W. Ahyoung, {{ site.time | date: '%Y' }}.
             <br />
             All rights reserved.
           </p>
-          <img class="logo" src="/images/logo.svg" />
+          <img class="logo" src="{{ '/' | relative_url }}images/logo.svg" />
         </div>
       </div>
     </div>
