--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-	<link href="http://gmpg.org/xfn/11" rel="profile">
+	<link href="//gmpg.org/xfn/11" rel="profile">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 
 	<!-- Twitter meta tags and opengraph.-->
@@ -26,7 +26,7 @@
 	{% endif %}
 
 	<!-- Enable responsiveness on mobile devices-->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>
 	{% if page.title == "Home" %}
@@ -40,9 +40,9 @@
 	<link rel="stylesheet" href="{{ '/' | relative_url }}css/style.css" />
 
 	<!-- Google Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Muli:300' rel='stylesheet' type='text/css' />
-	<link href='http://fonts.googleapis.com/css?family=Raleway:100,300,500' rel='stylesheet' type='text/css' />
-	<link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css' />
+	<link href='//fonts.googleapis.com/css?family=Muli:300' rel='stylesheet' type='text/css' />
+	<link href='//fonts.googleapis.com/css?family=Raleway:100,300,500' rel='stylesheet' type='text/css' />
+	<link href='//fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css' />
 
 	<!-- Icons -->
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ '/' | relative_url }}public/apple-touch-icon-precomposed.png" />
