--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
             <br />
             All rights reserved.
           </p>
-          <img class="logo" src="{{ '/' | relative_url }}images/logo.svg" />
+          <img role="presentation" class="logo" src="{{ '/' | relative_url }}images/logo.svg" />
         </div>
       </div>
     </div>
